--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>pburgh beta</title>
-  <!-- <style>
+  <style>
     body {
-      background-color: rgb(107, 28, 84);
+      background-color: #f0f6f0;
+      margin:0;
       padding:10px;
     }
-  </style> -->
+  </style>
 </head>
 
 <body>
     <div id="thegame"></div>
+    <h3>pburgh phaser goes here</h3>
     <!-- <script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.min.js" ></script> -->
     <!-- <script src="./scripts/phaser.min.js"></script> -->
-    <script src="./srcscripts/index.js"></script>
+    <script src="./src/scripts/index.js"></script>
 </body>
 
 </html>
