--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
 </head>
 
 <body>
-    <div id="thegame"></div>
-    <h3>pburgh phaser goes here</h3>
-    <!-- <script src="//cdn.jsdelivr.net/npm/phaser@3.24.1/dist/phaser.min.js" ></script> -->
-    <!-- <script src="./scripts/phaser.min.js"></script> -->
-    <script src="./src/scripts/index.js"></script>
+  <h3>pburgh phaser goes here!</h3>
+  <div id="thegame"></div>
+  <script src="main.js"></script>
 </body>
 
 </html>
